--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
                 </ul>
             </nav>
         </header>
+        <section class="home-main-section">
+            <div class="img-wrapper">
+                <div class="lady-image"></div>
+            </div>
+            <div class="call-to-action">
+                <h1 class="title">Feel The Music</h1>
+                <span class="subtitle">Stream over 20 thousand songs with one click</span>
+                <a href="join.html" class="btn">Join Now</a>
+            </div>
+        </section>
         <div class="home-page-circle-1"></div>
         <div class="home-page-circle-2"></div>
         <div class="home-page-circle-3"></div>
