--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body class="container full-height-grow">
         <header class="main-header">
-            <a href="/" class="brand-logo">
+            <a href="https://mkaustubh.github.io/SoundWave" class="brand-logo">
                 <img src="logo.png">
                 <div class="brand-logo-name">Soundwave</div>
             </a>
