--- a/join.html
+++ b/join.html
@@ -13,7 +13,7 @@
 <body class="full-height-grow">
     <div class="container full-height-grow">
         <header class="main-header">
-            <a href="/" class="brand-logo">
+            <a href="https://mkaustubh.github.io/SoundWave" class="brand-logo">
                 <img src="logo.png">
                 <div class="brand-logo-name">Soundwave</div>
             </a>
